force-app/main/default/objects/SIS_Pr_requis_du_cours__c/SIS_Pr_requis_du_cours__c.object-meta.xml
<CustomObject>
    <label>Prérequis du cours</label>
    <nameField>
        <label>Nom de Prérequis du cours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prérequis du cours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>