force-app/main/default/objects/SIS_Pr_requis_du_cours__c/fields/SIS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SIS_External_ID__c</fullName>
    <label>External ID</label>
    <type>TextArea</type>
</CustomField>