force-app/main/default/objects/SIS_Pr_requis_du_cours__c/fields/SIS_Modele_de_cours_concerne__c.field-meta.xml
<CustomField>
    <fullName>SIS_Modele_de_cours_concerne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modèle de cours concerné</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Prérequis</relationshipLabel>
    <relationshipName>Pre_requis_du_cours</relationshipName>
    <type>Lookup</type>
</CustomField>