force-app/main/default/objects/SIS_Pr_requis_du_cours__c/fields/SIS_Prerequis__c.field-meta.xml
<CustomField>
    <fullName>SIS_Prerequis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prérequis</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Prérequis</relationshipLabel>
    <relationshipName>Prerequis_du_modele_de_cours</relationshipName>
    <type>Lookup</type>
</CustomField>